[package]
name = "ccws"
version = "0.3.0"
edition = "2024"
description = "Claude Code Workspace - Git clone-based workspace manager"
rust-version = "1.93"

[dependencies]
clap = { version = "4", features = ["derive"] }
unison-kdl = { git = "https://github.com/chronista-club/unison-kdl" }
glob = "0.3"
